# scoop-radar

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  all.json  backfill_cache.py  evictions.json  hidden_gems.json  pyproject.toml  scoop.json  shovel.json  trending.json
chocolatey/: README.md  all.json  evictions.json  hidden_gems.json  scoop.json  shovel.json  trending.json
directory/: 004Ongoro+scoop-bucket.md  0xEFEF+scoop-apps.md  1jehuang+scoop-mmdr.md  2moveit+scoop-bucket.md  70sh1+jug.md  AChep+keyguard-repo-scoop.md  ACooper81+scoop-apps.md  AidenDem+scoopbucket.md  Alveel+scoop-bucket.md  Animesh-Ghosh+kulfi-scoop.md  Ash258+GithubActionsBucketForTesting.md  AspireOne+scoop-bucket.md  AsterNighT+scoop-bucket.md  BasileosFelices+scoop-bucket.md  Befod+Xeno.md  BinToss+scoop-bucket.md  BobH-Official+bobh-scoop-bucket.md  Br1ght0ne+scoop-bucket.md  Calinou+scoop-games.md  CoolDove+scoop-dove.md  Deaquay+scoop-bucket.md  DeltaLaboratory+lemon.md  Deskehs+personalBucket.md  DinVolodka+my-bucket.md  DoveBoy+Apps.md  Dreista+scoop-bucket.md  DubskySteam+scoop-bucket.md  Dumpinground+emulator-tools.md  EFLKumo+jam.md  Elypha+garden.md  Fleafa+myBucket.md  FriesI23+scoop-bucket.md  Gildedter+scoop-bucket.md  HPCesia+scoop-bucket.md  HeyItsJono+frey-scoop.md  Himalian+custom-bucket.md  Hsins+yogurt.md  Humorist7336+bucket.md  JorundMartinsen+scoop-buckets.md  Juemuren+ScoopBucket.md  (+304 more)
maintenance/: README.md  all.json  api.py  cache.py  config.py  evictions.json  github-crawler.py  github_crawler.py  hidden_gems.json  metrics.py  output.py  repo.py  scoop.json  shovel.json  state.py  trending.json
scoop_shovel/: README.md  (+6 more)
(+1716 files in other folders)
